# fast-tcp-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  makefile
example/: serializer.c  tcpClient  tcpClient.c  test.c
lib/: Message.h  Serializer.c  Serializer.h  TcpSocket.c  TcpSocket.h  Utils.c  Utils.h  serializer.c  serializer.h  socket.c  socket.h  tcpSocket.c  tcpSocket.h  util.c  util.h
server/: tcpServer.js
src/: FT_serializer.c  FT_serializer.h  FT_socket.c  FT_socket.h  FT_tcp_socket.c  FT_tcp_socket.h  FT_util.c  FT_util.h  ft_reader.c  ft_reader.h  ft_serializer.c  ft_serializer.h  ft_socket.c  ft_socket.h  ft_tcp_socket.c  ft_tcp_socket.h  ft_util.c  ft_util.h
test/: benchmark.c  client.c  fast_tcp_server.js  reader.c  serializer.c  socket.c  tcp_client.c  tcp_server.js  tcp_socket.c  test.c  util.c
